Agrego solucion del ejercicio 9 de la practica de busqueda.

--- a/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Busqueda.lyx
+++ b/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Busqueda.lyx
@@ -2172,10 +2172,7 @@ Puede observarse en negrita la expansión del nodo actual y debajo de cada
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $\boldsymbol{\overset{A\to Z}{{\scriptscriptstyle 75}}},\boldsymbol{\overset{A\to T}{{\scriptscriptstyle 118}}},\boldsymbol{\overset{A\to S}{{\scriptscriptstyle 140}}}$
-\end_inset
-
-
+a
 \end_layout
 
 \end_inset
@@ -2184,7 +2181,10 @@ Puede observarse en negrita la expansión del nodo actual y debajo de cada
 \begin_inset Text
 
 \begin_layout Plain Layout
-a
+\begin_inset Formula $\boldsymbol{\overset{A\to Z}{{\scriptscriptstyle 75}}},\boldsymbol{\overset{A\to T}{{\scriptscriptstyle 118}}},\boldsymbol{\overset{A\to S}{{\scriptscriptstyle 140}}}$
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -2192,6 +2192,15 @@ a
 </row>
 <row>
 <cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+az
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2203,18 +2212,18 @@ a
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-az
+azt
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2226,18 +2235,18 @@ az
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-azt
+azts
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2249,18 +2258,18 @@ azt
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-azts
+aztso
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2272,18 +2281,18 @@ azts
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztso
+aztsor
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2295,18 +2304,18 @@ aztso
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsor
+aztsorl
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2318,18 +2327,18 @@ aztsor
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsorl
+aztsorlf
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2341,7 +2350,9 @@ aztsorl
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2350,9 +2361,7 @@ aztsorlf
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2364,7 +2373,9 @@ aztsorlf
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2373,9 +2384,7 @@ aztsorlf
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2387,18 +2396,18 @@ aztsorlf
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsorlf
+aztsorlfm
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2410,18 +2419,18 @@ aztsorlf
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsorlfm
+aztsorlfmp
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2433,18 +2442,18 @@ aztsorlfm
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsorlfmp
+aztsorlfmpc
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2456,18 +2465,18 @@ aztsorlfmp
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-aztsorlfmpc
+aztsorlfmpcd
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2475,15 +2484,6 @@ aztsorlfmpc
 \end_inset
 
 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-aztsorlfmpcd
 \end_layout
 
 \end_inset
@@ -2523,10 +2523,7 @@ Puede observarse debajo de cada nodo
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $\boldsymbol{\overset{A\to S}{{\scriptscriptstyle 140+253=393}}},\boldsymbol{\overset{A\to T}{{\scriptscriptstyle 118+329=447}}},\boldsymbol{\overset{A\to Z}{{\scriptscriptstyle 75+374=449}}}$
-\end_inset
-
-
+a
 \end_layout
 
 \end_inset
@@ -2535,7 +2532,10 @@ Puede observarse debajo de cada nodo
 \begin_inset Text
 
 \begin_layout Plain Layout
-a
+\begin_inset Formula $\boldsymbol{\overset{A\to S}{{\scriptscriptstyle 140+253=393}}},\boldsymbol{\overset{A\to T}{{\scriptscriptstyle 118+329=447}}},\boldsymbol{\overset{A\to Z}{{\scriptscriptstyle 75+374=449}}}$
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -2543,6 +2543,15 @@ a
 </row>
 <row>
 <cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+as
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2554,18 +2563,18 @@ a
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-as
+asr
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2577,18 +2586,18 @@ as
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-asr
+asrp
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2600,18 +2609,18 @@ asr
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-asrp
+asrpf
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2619,15 +2628,6 @@ asrp
 \end_inset
 
 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-asrpf
 \end_layout
 
 \end_inset
@@ -2902,7 +2902,7 @@ No es admisible pues
 
 \begin_deeper
 \begin_layout Enumerate
-Primero en profundidad:
+Primero en profundidad con chequeo de ancestros:
 \end_layout
 
 \begin_deeper
@@ -2923,10 +2923,7 @@ Primero en profundidad:
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $\boldsymbol{I\to B},\boldsymbol{I\to C}$
-\end_inset
-
-
+i
 \end_layout
 
 \end_inset
@@ -2935,7 +2932,10 @@ Primero en profundidad:
 \begin_inset Text
 
 \begin_layout Plain Layout
-i
+\begin_inset Formula $\boldsymbol{I\to B},\boldsymbol{I\to C}$
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -2943,6 +2943,15 @@ i
 </row>
 <row>
 <cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+ib
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2954,18 +2963,18 @@ i
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ib
+ibc
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -2977,18 +2986,18 @@ ib
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibc
+ibca
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3000,18 +3009,18 @@ ibc
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibca
+ibcae
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3023,18 +3032,18 @@ ibca
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibcae
+ibcaed
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3046,18 +3055,18 @@ ibcae
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibcaed
+ibcaedf
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3065,15 +3074,6 @@ ibcaed
 \end_inset
 
 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-ibcaedf
 \end_layout
 
 \end_inset
@@ -3109,10 +3109,7 @@ A*:
 \begin_inset Text
 
 \begin_layout Plain Layout
-\begin_inset Formula $\boldsymbol{\overset{I\to B}{{\scriptscriptstyle 4+11=15}}},\boldsymbol{\overset{I\to C}{{\scriptscriptstyle 1+14=15}}}$
-\end_inset
-
-
+i
 \end_layout
 
 \end_inset
@@ -3121,7 +3118,10 @@ A*:
 \begin_inset Text
 
 \begin_layout Plain Layout
-i
+\begin_inset Formula $\boldsymbol{\overset{I\to B}{{\scriptscriptstyle 4+11=15}}},\boldsymbol{\overset{I\to C}{{\scriptscriptstyle 1+14=15}}}$
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -3129,6 +3129,15 @@ i
 </row>
 <row>
 <cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+ib
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3140,18 +3149,18 @@ i
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ib
+ibd
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3163,18 +3172,18 @@ ib
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibd
+ibdc
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3186,18 +3195,18 @@ ibd
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibdc
+ibdca
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3209,7 +3218,9 @@ ibdc
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3218,9 +3229,7 @@ ibdca
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3232,18 +3241,18 @@ ibdca
 
 \end_inset
 </cell>
-<cell alignment="center" valignment="top" usebox="none">
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
-ibdca
+ibdcaf
 \end_layout
 
 \end_inset
 </cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" rightline="true" usebox="none">
+<cell alignment="center" valignment="top" usebox="none">
 \begin_inset Text
 
 \begin_layout Plain Layout
@@ -3251,15 +3260,6 @@ ibdca
 \end_inset
 
 
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-ibdcaf
 \end_layout
 
 \end_inset
@@ -4639,7 +4639,7 @@ Costo
 \end_layout
 
 \begin_layout Enumerate
-\begin_inset Formula $\min\left(h_{1}\left(n\right),h_{2}\left(n\right)\right)$
+\begin_inset Formula $\min\left\{ h_{1}\left(n\right),h_{2}\left(n\right)\right\} $
 \end_inset
 
 
@@ -4660,7 +4660,7 @@ Costo
 \end_layout
 
 \begin_layout Enumerate
-\begin_inset Formula $\max\left(h_{1}\left(n\right),h_{2}\left(n\right)\right)$
+\begin_inset Formula $\max\left\{ h_{1}\left(n\right),h_{2}\left(n\right)\right\} $
 \end_inset
 
 
@@ -4690,13 +4690,91 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+Puesto que ambas heurísticas son admisibles, podemos garantizar entonces
+ que tambien son completas y optimas.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Enumerate
+Verdadero.
+\end_layout
+
+\begin_layout Enumerate
+Verdadero.
+\end_layout
+
+\begin_layout Enumerate
+Verdadero: puesto que 
+\begin_inset Formula $h_{1}$
+\end_inset
+
+ y 
+\begin_inset Formula $h_{2}$
+\end_inset
+
+ son admisibles, es facil ver que también lo será el mínimo entre ellas.
+\end_layout
+
+\begin_layout Enumerate
+Falso: para el nodo 
+\begin_inset Formula $D$
+\end_inset
+
+ resulta 
+\begin_inset Formula $h_{1}\left(D\right)+h_{2}\left(D\right)=4+5=9>h^{*}\left(D\right)=5$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+Verdadero.
+\end_layout
+
+\begin_layout Enumerate
+Verdadero: puesto que 
+\begin_inset Formula $h_{1}$
+\end_inset
+
+ y 
+\begin_inset Formula $h_{2}$
+\end_inset
+
+ son admisibles, es facil ver que también lo será el máximo entre ellas.
+\end_layout
+
+\begin_layout Enumerate
+Falso: para el nodo 
+\begin_inset Formula $D$
+\end_inset
+
+ resulta 
+\begin_inset Formula $h_{1}\left(D\right)\cdot h_{2}\left(D\right)=4\cdot5=20>h^{*}\left(D\right)=5$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Enumerate
+Falso: para el nodo 
+\begin_inset Formula $D$
+\end_inset
+
+ resulta 
+\begin_inset Formula $h_{1}\left(D\right)\cdot h_{2}\left(D\right)/2=4\cdot5/2=10>h^{*}\left(D\right)=5$
+\end_inset
+
+.
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Enumerate
 Consideremos un puzzle consistente en una fila con 4 fichas con la siguiente
@@ -4786,6 +4864,10 @@ Una ficha puede saltar sobre otras dos como máximo hasta la celda vacía,
 \begin_layout Itemize
 El objetivo es llegar a tener todas las fichas blancas a la izquierda de
  todas las negras (sin importar la posición de la casilla vacía).
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Enumerate
@@ -4849,10 +4931,6 @@ Soluciones
 \end_inset
 
 .
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \begin_layout Itemize
@@ -4932,6 +5010,10 @@ Pueden definirse análogamente los operadores
 \end_inset
 
 .
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \end_deeper
