Agrego solucion del ejercicio 6b3 de la practica de busqueda.

--- a/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Busqueda.lyx
+++ b/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Busqueda.lyx
@@ -3274,9 +3274,117 @@ ibdcaf
 
 \end_deeper
 \begin_layout Enumerate
-Escalada simple: COMPLETAR.
+Escalada simple:
 \end_layout
 
+\begin_deeper
+\begin_layout Standard
+\align center
+\begin_inset Tabular
+<lyxtabular version="3" rows="4" columns="2">
+<features tabularvalignment="middle">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+i
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset Formula $\overset{I\to B}{{\scriptscriptstyle 4+11=15}},\overset{I\to C}{{\scriptscriptstyle 1+14=15}}$
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+ib
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset Formula $\overset{I\to B\to D}{{\scriptscriptstyle 9+4=13}},\overset{I\to B\to C}{{\scriptscriptstyle 6+14=20}},\overset{I\to B\to G1}{{\scriptscriptstyle 25+0=25}}$
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+ibd
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset Formula $\overset{I\to B\to D\to F}{{\scriptscriptstyle 15+3=18}},\overset{I\to B\to D\to G2}{{\scriptscriptstyle 20+0=20}}$
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+ibdf
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+\begin_inset Formula $\overset{I\to B\to D\to F\to G2}{{\scriptscriptstyle 18+0=18}}$
+\end_inset
+
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \end_deeper
 \end_deeper
 \begin_layout Enumerate
@@ -3435,6 +3543,10 @@ O
 \end_inset
 
 
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \end_deeper
@@ -3530,10 +3642,6 @@ end{tikzpicture}
 \end_inset
 
 
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
@@ -3611,10 +3719,6 @@ COMPLETAR.
 
 \begin_layout Enumerate
 COMPLETAR.
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
@@ -4691,7 +4795,7 @@ Soluciones
 
 \begin_layout Enumerate
 Puesto que ambas heurísticas son admisibles, podemos garantizar entonces
- que tambien son completas y optimas.
+ que tambien son optimas.
 \end_layout
 
 \begin_layout Enumerate
@@ -5152,6 +5256,10 @@ Representar el problema en espacio de estados definiendo los operadores
 
 \begin_layout Enumerate
 Definir una heurística y aplicar el algoritmo A.*
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_layout Paragraph
@@ -5209,10 +5317,6 @@ Solución
 
 \begin_layout Standard
 COMPLETAR.
-\begin_inset Newpage pagebreak
-\end_inset
-
-
 \end_layout
 
 \end_deeper
